<resources>
    <string name="app_name">Quiz</string>
    <string name="restart_button_description">Restart button</string>
    <string name="progression_text">%1$s - %2$s</string>
    <string name="text_score">Score: %1$s</string>
    <string name="back_button">Back_button</string>
    <string name="settings_title_text">Settings</string>
    <string name="category_field_hint">Category</string>
    <string name="difficulty_text_hint">Difficulty</string>
    <string name="question_type_text_hint">Question type</string>
    <string name="question_number_text_hint">Question number</string>
    <string name="bt_apply_text">Apply</string>
</resources>