<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?colorSurfaceContainerLow"
    android:padding="10dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_back_to_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?attr/materialIconButtonStyle"
        app:icon="@drawable/ic_back"
        app:iconSize="25sp"
        app:iconTint="?colorOnSurface"
        android:contentDescription="@string/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/settings_title_text"
        android:textAlignment="center"
        android:textColor="?colorOnSurface"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/bt_back_to_quiz"
        app:layout_constraintStart_toEndOf="@+id/bt_back_to_quiz"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_field_hint"
        android:layout_marginTop="10dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_back_to_quiz">

        <AutoCompleteTextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:text="Any"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/difficulty_text_hint"
        android:layout_marginTop="10dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_category">

        <AutoCompleteTextView
            android:id="@+id/tv_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_type_text_hint"
        android:layout_marginTop="10dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_difficulty">

        <AutoCompleteTextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_question_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question_number_text_hint"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tv_question_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="10"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="?colorSurfaceContainer"
        android:text="@string/bt_apply_text"
        android:textColor="?colorOnSurface"
        android:fontFamily="@font/open_sans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_question_number" />

</androidx.constraintlayout.widget.ConstraintLayout>